# GOVNO-BOT

./: Makefile  docker-compose.yml  pyproject.toml
src/alembic/versions/: e926e46a5379_init.py
src/bot/: __main__.py  config.py
src/bot/db/: __init__.py  base.py  models.py
src/bot/handlers/: __init__.py  admin.py  start.py
src/bot/keyboards/: reply.py
src/bot/services/: mcap_editor.py
