[tool.poetry]
name = "govno-bot"
version = "0.1.0"
description = "pump $GOVNO up"
authors = ["hoopengo <hoopengo@yandex.ru>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = { version = "3.17.0", allow-prereleases = true }
pydantic-settings = "^2.7.1"
betterlogging = "^1.0.0"
sqlalchemy = { extras = ["asyncio"], version = "2.0.37" }
alembic = "^1.14.0"
asyncpg = "^0.30.0"
loguru = "^0.7.3"
redis = "^5.2.1"
aiohttp = "^3.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
